--- a/templates/file_management/file_management_users_files.html
+++ b/templates/file_management/file_management_users_files.html
@@ -1,14 +1,41 @@
 {% block users_files %}
 
-	<div>{{ "Upload time"|center:"20"}}{{ "Name"|center:"30" }}</div>
+	{% if users_files|length > 0 %}
+		<table id="uploaded_files" class="file_table">
+			
+			<tr>
+				<th></th>
+				<th>{{ "Upload date"|center:"20"}}</th>
+				<th>{{ "Name"|center:"30" }}</th>
+			</tr>
+
+			{% for f in users_files %}
+
+				<tr class="file_table_row  {% cycle 'file_table_row1' 'file_table_row2' %}" onClick="{% url stemweb_home_url%}">
+					<td class="file_table_checkbox"> 
+						<input type="checkbox" name="file_delete" value="{{f.id}}" />
+					</td>
+					
+					<td class="upload_time">
+						{{ f.time|date:"Y-m-d"|center:"20" }}
+					</td>
+					
+					<td class="file_name">
+						{{ f.name|rjust:"30" }}
+					</td>
+				</tr>
+			{% endfor %}
+
+
+
+		</table>
+		
+		<button class="delete_files" type="delete" onClick="">Delete</button>
 	
-	{% for f in users_files %}
-		<div>{{ f.time|date:"Y-m-d H:i"|center:"20" }}{{ f.name|rjust:"30" }}</div>
-
-
-
-	{% empty %}
-		No uploaded files.
-	{% endfor %}
+	{% else %}
+		<p class="no_files">
+			No uploaded files.
+		</p>
+	{% endif %}
 
 {% endblock %}
