--- a/media/css/file_management.css
+++ b/media/css/file_management.css
@@ -125,7 +125,7 @@ display: none;
 .file_table
 {
 	border-collapse: collapse; 	/* Collapse borders into single line. */
-	font-size: 0.8em;
+	font-size: 1em;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-left: 5px;
@@ -136,24 +136,25 @@ display: none;
 {
 	font-variant: small-caps;
 	font-weight: bold;
-	border-bottom: 1px solid black;
+	color: #A2A2A2;
+	border-top: 1px solid #A2A2A2;
+	border-bottom: 1px solid #A2A2A2;
 }
 
 .file_table tr.file_table_row1:hover, .file_table tr.file_table_row2:hover
 {
-	background: rgba(222,219,193, 0.5)
+	background: rgba(222,219,193, 0.5);
+	cursor: pointer;
 	
 }
 
 .file_table_row1
 {
-	
-	
 }
 
 .file_table_row2
 {
-	background: rgba(72, 176, 176, 0.2);	
+	background: rgba(72, 176, 176, 0.2);
 }
 
 .file_table td
