--- a/templates/algorithms/algorithms_base.html
+++ b/templates/algorithms/algorithms_base.html
@@ -1,27 +1,47 @@
-{% extends "base.html" %}
+{% extends "home.html" %}
 
 {% block title %}
 	{{ site.name }} - algorithms
 {% endblock %}
 
-{% block subpage_index %}
+{% block script_and_css %}
+	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/file_management.css" />
+	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/algorithms.css" />
+	<script src="{{ MEDIA_URL }}javascript/general.js" type="text/javascript"></script>
+	<script type="text/javascript" src="{{ MEDIA_URL}}javascript/jquery.tablesorter.js"></script>
 
-	<div id="all_algorithms_list">
-		{% block all_algorithms_list %}
+{% endblock %}
+
+{% block subpage_index_title %}
+	<h1>Available algorithms</h1>
+{% endblock%}
+
+{% block subpage_index_table %}
+		<table id="subpage_index_table" class="file_table">
+			<tbody class="algorithm_table_body">
 			 {% for algo in all_algorithms %}
-			 	<tr class="file_table_row  {% cycle 'file_table_row1' 'file_table_row2' %}" onClick="{% url stemweb_home_url %}">
-					<td class="algorithm_name">
-						{{ algo.name }}
+			 	<tr class="algorithm_table_row">
+			 		<td class="algorithm_name">
+			 			<a href="{% url algorithms_details_url algo_id=algo.id %}">{{ algo.name }}</a>
 					</td>
 				</tr>
-			 
-			 
 			 {% endfor %}
-		{% endblock %}
-	
-	
-	
+		 	</tbody>
+		 </table>
+{% endblock %}
+
+{% block subpage_content %}
+	<div class="intro">
+		<h1>Algorithms in stemmatology</h1>
+		
+		<p>
+		Input needed: Some general info about algorithms in stemmatology:<br>
+		<ul>
+			<li>problem types</li>
+			<li>focus</li>	
+			<li>etcetera</li>
+		</ul>
+		</p>
 	</div>
 	
 {% endblock %}
-
