--- a/templates/file_management/file_management_users_files.html
+++ b/templates/file_management/file_management_users_files.html
@@ -13,7 +13,7 @@
 
 				<tr class="file_table_row  {% cycle 'file_table_row1' 'file_table_row2' %}" onClick="{% url stemweb_home_url%}">
 					<td class="file_table_checkbox"> 
-						<input type="checkbox" name="file_delete" value="{{f.id}}" />
+						<input type="checkbox" name="file_delete_{{f.id}}" value="{{f.id}}" />
 					</td>
 					
 					<td class="upload_time">
