--- a/templates/registration_base.html
+++ b/templates/registration_base.html
@@ -4,8 +4,13 @@
 	{{ site.name }} - Registration
 {% endblock %}
 
+{% block menu_home %}{% endblock %}
+{% block menu_login %}active{% endblock %}
+
 {% block subpage_index %}
 {% endblock %}
+
+{% block subpage_main_header %} Registration {% endblock %}
 
 {% block subpage_content %}
 	<div class="registration">
