--- a/media/css/stemweb.css
+++ b/media/css/stemweb.css
@@ -1,4 +1,10 @@
 /* GENERAL STYLINGS */
+
+* 
+{
+	margin: 0px;
+}
+
 html
 {
 	height:100%; 
@@ -7,6 +13,8 @@ html
 	margin:0px;
 	border:0px; 
 	overflow:hidden;
+	min-width: 900px;
+	min-height: 300px;
 }
 
 body
@@ -17,9 +25,6 @@ body
 	max-height: 100%;
 	height: 100%;
 	overflow:hidden;
-	
-	background-image: url(../img/fern-vlight-grey-alpha.jpg);
-	/*opacity: 0.4;*/
 	background-repeat: no-repeat;
 	background-position: right bottom;
 }
@@ -27,14 +32,22 @@ body
 h1
 {
 	text-align: left;
-	padding-left: 20px;
-	margin-left: 5px;
-	margin-right: 5px;
 	font-size: 1.5em;
 	font-family: Verdana;
 	font-variant: small-caps;
-	color: #A2A2A2;
-	border-bottom: 1px solid #A2A2A2;
+	color: #396A6A;
+	margin: 0px;
+	padding: 10 0 0 0;
+	width: 100%;
+	font-weight: normal;
+}
+
+#subpage_main_header_wrapper
+{
+	padding-left: 30px;
+	background-color: #D1DDDD;
+	border-top: 2px solid rgba(128, 164, 164, 1);
+	border-bottom: 1px solid rgba(128, 164, 164, 1);
 }
 
 h2
@@ -48,19 +61,24 @@ h2
 a
 {
 	text-decoration: none;
-	color: #48B0B0;
+	color: #396A6A;
 }
 
 a:visited
 {
 	text-decoration: none;
-	color: #186666;
+	color: #396A6A;
 }
 
 a:hover
 {
 	text-decoration: none;
-	color: #8FE3DC;
+	color: #D1DDDD;
+}
+
+p 
+{
+	padding-top: 10px;
 }
 
 #main_banner img
@@ -83,7 +101,7 @@ div#main_banner_and_menu
 	position: fixed;
 	height: 35px;
 	width: 100%;
-	min-width: 600px;
+	min-width: 900px;
 	
 	margin-top: 0px;
 	margin-bottom: 0px;
@@ -93,21 +111,7 @@ div#main_banner_and_menu
 	border: 0px;
 	
 	text-align: center;
-	
-	background-image: linear-gradient(right , #186666 0%, #48B0B0 67%);
-	background-image: -o-linear-gradient(right , #186666 0%, #48B0B0 67%);
-	background-image: -moz-linear-gradient(right , #186666 0%, #48B0B0 67%);
-	background-image: -webkit-linear-gradient(right , #186666 0%, #48B0B0 67%);
-	background-image: -ms-linear-gradient(right , #186666 0%, #48B0B0 67%);
-
-	background-image: -webkit-gradient(
-		linear,
-		right bottom,
-		left bottom,
-		color-stop(0, #186666),
-		color-stop(0.67, #48B0B0)
-	);	
-	
+	background-color: #396A6A;
 	z-index: 100;
 }
 
@@ -115,150 +119,145 @@ div#main_banner
 {
 	position: fixed;
 	height: 35px;
-	width: 60%;
+	width: 55%;
 	top: 0px;
 	left: 0px;
-	min-width: 360px;
+	min-width: 495px;
 	overflow: hidden;
 	
 	padding: 0px;
-	padding-left: 0px;
 	border: 0px;
 	
 	font-size: 1em;
 	font-family: Verdana;
 	text-align: left;
 	color: white;
-	letter-spacing: 0.05em;
-
-	background-image: linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-	background-image: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-	background-image: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-	background-image: -ms-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0, rgba(0, 0, 0, 0.3)),
-		color-stop(1, rgba(255,255,255, 0.1))
-	    );
 }
 
 table#menu_table 
 {
 	position: relative;
-	left: 60%;
 	top: 0px;
+	float:right;
 	height:35px;
-	width: 40%;
-	min-width: 240px;
+	max-width: 360px;
+	min-width: 360px;
 	
 	padding: 0px;
 	padding-right: 15px;
 	border: 0px;
 	margin: 0px;
 	
-	font-family: Verdana;
+	font-family: Palantino;
 	text-align:	center;	
-	font-size: 0.7em;
-	color: white;
-	
-	background-image: linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-	background-image: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-	background-image: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-	background-image: -ms-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(255,255,255, 0.1) 100%);
-	
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0, rgba(0, 0, 0, 0.3)),
-		color-stop(1, rgba(255,255,255, 0.1))
-	);	
+	font-size: 14px;
 }
 
-a.menu_link
+a.menu_link 
 {
-	color: white;
+	color: rgb(210, 210, 210);
 	text-decoration: none;
 	letter-spacing: 0.1em;
 	overflow: inherit;
 }
 
-a.menu_link:hover, a.menu_link:active
+a.menu_link:hover, #menu_table .active
 {
-	text-decoration: underline;	
+	color: white;
 }
 
 td.menu_item
 {
-	width: 8%;
 	top: 5px;
 	left: 0px;
-	
 	padding: 0px;
 	border: 0px;
 	margin: 0px;
 	overflow: hidden;
 }
 
+.box-sizing_border
+{
+	box-sizing: border-box;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+}
+
+#content_wrapper
+{
+	height: 100%;
+	width: 100%;
+	float: left;
+	overflow-x: hidden;
+	padding-left: 315px;
+	padding-top: 35px;
+	
+	background-image: linear-gradient(left , rgba(220,220,220, 1) 0px, rgba(235,235,235, 0.5) 8px, rgba(255,255,255, 0.0) 20px);
+	background-image: -o-linear-gradient(left , rgba(220,220,220, 1) 0px, rgba(235,235,235, 0.5) 8px, rgba(255,255,255, 0.0) 20px);
+	background-image: -moz-linear-gradient(left , rgba(220,220,220, 1) 315px, rgba(235,235,235, 0.5) 323px, rgba(255,255,255, 0.0) 335px);
+	background-image: -webkit-linear-gradient(left , rgba(220,220,220, 1) 0px, rgba(235,235,235, 0.5) 8px, rgba(255,255,255, 0.0) 20px);
+	background-image: -ms-linear-gradient(left , rgba(220,220,220, 1) 0px, rgba(235,235,235, 0.5) 8px, rgba(255,255,255, 0.0) 20px);
+	
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		right top,
+		color-stop(0px, rgba(220,220,220,1)),
+		color-stop(8px, rgba(235,235,235, 0.5)),
+		color-stop(20px, rgba(255,255,255, 0.0))
+	);
+}
 
 /* MAIN CONTENT OF THE SITE */
 div#main_content
 {
-	position: relative;
-	display: block;
+	float:left;
 	width: 100%;
+	max-width: 100%;
 	height: 100%;
-	max-height: 100%;
-	min-width: 600px;
-	overflow:auto;
-	
-
-	
-	font-size: 0.8em;
-	font-family: Verdana;
-	
-background-image: linear-gradient(left , rgba(240,240,240, 0.9) 5%, rgba(255,252,255, 0.7) 27%, rgba(245,245,245, 0.7) 89%);
-background-image: -o-linear-gradient(left , rgba(240,240,240, 0.9) 5%, rgba(255,252,255, 0.7) 27%, rgba(245,245,245, 0.7) 89%);
-background-image: -moz-linear-gradient(left , rgba(240,240,240, 0.9) 5%, rgba(255,252,255, 0.7) 27%, rgba(245,245,245, 0.7) 89%);
-background-image: -webkit-linear-gradient(left , rgba(240,240,240, 0.9) 5%, rgba(255,252,255, 0.7) 27%, rgba(245,245,245, 0.7) 89%);
-background-image: -ms-linear-gradient(left , rgba(240,240,240, 0.9) 5%, rgba(255,252,255, 0.7) 27%, rgba(245,245,245, 0.7) 89%);
-
-background-image: -webkit-gradient(
-	linear,
-	left top,
-	right top,
-	color-stop(0.05, rgba(240,240,240, 0.9)),
-	color-stop(0.27, rgba(255,252,255, 0.7)),
-	color-stop(0.89, rgba(245,245,245, 0.7))
-);
+	overflow-y: auto;
+	overflow-x: hidden;
+	font-family: Palantino;
 }
 
 div#subpage_index
 {
+	padding-top: 35px;
 	display: block;
-	position: absolute;
-	width: 26%;
+	position: fixed;
 	height: inherit;
-	top: 35px;
 	left: -1px;
-	float: left;
+	width: 315px;
 	border-right: 1px solid #CDCBCB;
 	overflow: auto;
-	background-color: #F8F5F4;
+	color: rgba(248, 245, 244, 0.9);
+	background-color: rgba(128, 164, 164, 1);
+	/*background-color: rgba(248, 245, 244, 0.9);*/
+	background-image: url(../img/text.png);
+	background-repeat: no-repeat;
+	background-position: left bottom;
 }
 
 table#subpage_index_table 
 {
 	display: block;
-	padding-left: 5px;
 	overflow:auto;
 	font-size: 1em;
+	min-width: inherit;
 	background-color: transparent;
+}
+
+#subpage_index, #subpage_index th, #subpage_index h1
+{
+	color: rgba(248, 245, 244, 0.9);
+	border-bottom: 1px solid rgba(248, 245, 244, 0.9);
+	border-top: 1px solid rgba(248, 245, 244, 0.9);
+}
+
+#subpage_index h1
+{
+	text-align: center;
 }
 
 td.subpage_index_header
@@ -269,26 +268,13 @@ td.subpage_index_header
 
 div#subpage_content
 {
-	display: inline;
-	position: relative;
-	height: inherit;
-	float: right;
-	width: 74%;
-	/*background-color: transparent;*/
-	background-image: linear-gradient(left , rgb(240,240,240) 0%, rgb(255,255,255) 5%, rgb(255,255,255) 81%);
-background-image: -o-linear-gradient(left , rgb(240,240,240) 0%, rgb(255,255,255) 5%, rgb(255,255,255) 81%);
-background-image: -moz-linear-gradient(left , rgba(240,240,240, 1) 0%, rgba(255,255,255, 0.5) 5%, rgba(255,255,255, 0.3) 81%);
-background-image: -webkit-linear-gradient(left , rgb(240,240,240) 0%, rgb(255,255,255) 14%, rgb(255,255,255) 81%);
-background-image: -ms-linear-gradient(left , rgb(240,240,240) 0%, rgb(255,255,255) 14%, rgb(255,255,255) 81%);
+	padding: 0 20px; 
+	float: left;
+	width: inherit;
+	overflow-x: hidden;
+	overflow-y: auto;
+	overflow: auto;
 
-background-image: -webkit-gradient(
-	linear,
-	left top,
-	right top,
-	color-stop(0, rgb(240,240,240)),
-	color-stop(0.14, rgb(255,255,255)),
-	color-stop(0.81, rgb(255,255,255))
-);
 }
 
 /* SITE'S FOOTER */
@@ -335,13 +321,15 @@ div#footer_padding
 /* HOME.HTML */
 div.intro 
 {
-	padding-left: 30px;
-	padding-right: 20px;
+	padding-top: 10px;
+	padding-left: 5px;
+	
 }
 
 
-div.upload_form
+#upload_form
 {
+	padding-left: 15px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -351,13 +339,6 @@ p.no_files
 {
 	padding-left: 30px;
 	font-style: italic;
-}
-
-/* Registration apps divs */
-div.registration 
-{
-	padding-left: 10px;
-	width: 50%;
 }
 
 /* DEVELOPMENT SETTINGS */
@@ -389,6 +370,7 @@ display: none;
 
 .tabnav 
 {
+	margin: 0px;
 	border-bottom: 1px solid #A2A2A2;
 	padding-left: 10px;
 }
@@ -417,6 +399,29 @@ display: none;
 	color: #A2A2A2;
 }
 
+#all_files_tabs 
+{
+	padding-top: 10px;
+	border-top: 1px solid rgba(248, 245, 244, 0.9);
+}
+#all_files_tabs .tabnav 
+{
+	border-bottom: 1px solid rgba(248, 245, 244, 0.9);
+}
+
+
+#all_files_tabs .tabnav li
+{
+	color: rgba(222,219,193, 0.5);
+}
+
+#all_files_tabs .tabnav li a:hover, 
+#all_files_tabs .tabnav li a:active,
+#all_files_tabs .tabnav li.ui-tabs-selected a
+{
+	color: rgba(248, 245, 244, 0.9);
+}
+
 /* Stylings for the file and run-tables. */
 
 .file_table
@@ -425,19 +430,15 @@ display: none;
 	font-size: 1em;
 	margin-top: 10px;
 	margin-bottom: 10px;
-	/*
-	margin-left: auto ;
-  	margin-right: auto ;
-  	*/
 }
 
 .file_table th /* First row with column names */	
 {
 	font-variant: small-caps;
 	font-weight: bold;
-	color: #A2A2A2;
-	border-top: 1px solid #A2A2A2;
-	border-bottom: 1px solid #A2A2A2;
+	color: rgba(128, 164, 164, 1);
+	border-top: 1px solid rgba(128, 164, 164, 1);
+	border-bottom: 1px solid rgba(128, 164, 164, 1);
 }
 
 
@@ -486,4 +487,91 @@ display: none;
 	padding-right: 5px;
 }
 
+#user_files tbody
+{
+	/*padding-left: 5px;*/
+	
+}
 
+#user_files a, #user_files a:hover, #user_files a:visited,
+#user_files td
+{
+	color: rgba(248, 245, 244, 0.9);
+}
+
+#user_files th
+{
+	border: 0px;
+	padding-right: 20px;
+	padding-left: 5px;
+	padding-bottom: 3px;
+	margin: 0px;
+}
+
+#user_files .file_name
+{
+	text-align: right;
+}
+
+#user_files .last_access
+{
+	text-align: left;
+	padding-left: 5px;
+}
+
+.file_tab
+{
+	padding: 10 0;
+	
+}
+
+input[type="submit"]
+{
+	margin-top: 10px;
+	
+}
+
+#recent_activities_table
+{
+	width: 100%;
+}
+
+#recent_activities_table td
+{
+	width: 100%;
+	padding-left: 5px;
+	
+	float: right;
+	text-align: right;
+	font-size: 0.9em;
+}
+#recent_activities_table tr
+{
+	overflow: hidden;
+	float: right;
+	width: 100%;
+	margin-right: -2px;
+	display: block;
+	border-bottom: 1px solid #CDCBCB;
+}
+
+#recent_activities_table a, 
+#recent_activities_table a:hover, 
+#recent_activities_table a:visited
+{
+	text-decoration: none;
+	text-align: right;
+	color: rgba(248, 245, 244, 0.9);
+}
+
+#recent_activities_table tr:hover
+{
+	background: #D1DDDD;
+	cursor: pointer;
+}
+
+div.pagination
+{
+	display: inline-block;
+	margin-left: 80px;
+}
