Neighbour Net added. (draws pdf in outfolder but does not show it in webpage yet.)

--- a/media/css/stemweb.css
+++ b/media/css/stemweb.css
@@ -234,7 +234,7 @@ div#subpage_index
 	color: rgba(248, 245, 244, 0.9);
 	background-color: rgba(128, 164, 164, 1);
 	/*background-color: rgba(248, 245, 244, 0.9);*/
-	background-image: url(../img/text.png);
+	background-image: url(../img/text2.png);
 	background-repeat: no-repeat;
 	background-position: left bottom;
 }
