Celery's tasks are now working. Still have to fix the issues if the task crashes due to some unknown reasons, that is not crash the whole node because of it.

--- a/media/css/stemweb.css
+++ b/media/css/stemweb.css
@@ -34,7 +34,7 @@ h1
 	text-align: left;
 	font-size: 1.5em;
 	font-family: Verdana;
-	font-variant: small-caps;
+	/*font-variant: small-caps;*/
 	color: #396A6A;
 	margin: 0px;
 	padding: 10 0 0 0;
