Some cosmetic algorithm modifications

--- a/templates/algorithms/algorithms_base.html
+++ b/templates/algorithms/algorithms_base.html
@@ -16,7 +16,7 @@
 		{# Hack to get tablesorter work when refreshing page. #}
 		document.write('<script type="text/javascript" src="{{ MEDIA_URL }}javascript/general.js?' + new Date().getTime() + '"><\/script>');
 	</script>
-	<script type="text/javascript" src="{{ MEDIA_URL}}javascript/jquery.tablesorter.js"></script>
+	<script type="text/javascript" src="{{ MEDIA_URL}}javascript/jquery.tablesorter-update.js"></script>
 
 {% endblock %}
 
