Few more tweaks for django 1.5.4 and changed the callback tasks to contain json directly in the response body.

--- a/Stemweb/templates/registration/password_reset_complete.html
+++ b/Stemweb/templates/registration/password_reset_complete.html
@@ -11,7 +11,7 @@
 	</p>
 	
 	<p>
-		<a href="{% url auth_login %}">Log in</a>
+		<a href="{% url "auth_login" %}">Log in</a>
 	</p>
 
 {% endblock %}
