Changed resulting image formats from algorithm-runs to png for the users-server.

--- a/Stemweb/templates/algorithms/algorithm_running_results.html
+++ b/Stemweb/templates/algorithms/algorithm_running_results.html
@@ -62,7 +62,7 @@
 				No image for this run. <br>
 			{% endif %}
 		{% else %}
-			{% if algorithm_run.status >= 1 %}
+			{% if algorithm_run.status > 1 %}
 				Run failed for unexpected reason!
 			{% endif %}
 		{% endif %}
