--- a/Stemweb/templates/algorithms/algorithms_details.html
+++ b/Stemweb/templates/algorithms/algorithms_details.html
@@ -14,10 +14,8 @@
 		<ul class="tabnav">  
 			<li><a href="#algorithm_about">About</a></li>  
 			
-			<li><a href="#new_run">{% if user.is_authenticated %}New Run{% else %}Test it{% endif %}</a></li>  
-			{% if user.is_authenticated %}
+			<li><a href="#new_run">New Run</a></li>  
 			<li><a href="#previous_runs">Previous Runs</a></li>  
-			{% endif %}
 		</ul>  
 	
 		<div id="algorithm_about" class="intro algorithm_tab">
@@ -56,7 +54,6 @@
 		{% endblock %}
 		</div>
 		
-		{% if user.is_authenticated %}
 		<div id="previous_runs" class="intro algorithm_tab">
 			{% if algorithm_runs|length > 0 %}
 			<div id="previous_runs_div">
@@ -104,7 +101,6 @@
 					No runs with this algorithm.
 			{% endif %}
 		</div>
-		{% endif %}
 	
 	</div>
 	
